--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,19 +34,14 @@
     <!--DeclngayCapNhatalue config end-->
 
     <!--Attribute begin-->
-    <string name="OBJECTID">OBJECTID</string>
+    <string name="objectID">objectID</string>
     <string name="IDDIEMDANHGIA">IDDiemDanhGia</string>
     <string name="NGAY_CAP_NHAT">NgayCapNhat</string>
     <!--Attribute end-->
     <string name="DIACHI">DiaChi</string>
 
-    <!--Attribute VatTu Begin-->TenMau
-    <string name="IDMAUKIEMNGHIEM">IDMauKiemNghiem</string>
-    <string name="TENMAU">TenMau</string>
-    <!--Attribute VatTu End-->
 
-    <string name="title_danhsachcacdiemdanhgia">Danh sách các mẫu đánh giá</string>
-    <string name="title_danhsachmaukiemnghiem">Danh sách mẫu kiểm nghiệm</string>
+    <string name="title_danhsachvattu">Danh sách vật tư</string>
     <string name="tongloaitrangthai">tongloaitrangthai</string>
     <string name="title_activity_tra_cuu">TraCuuActivity</string>
     <string name="ket_qua_objectid">ket_qua_objectid</string>
@@ -78,10 +73,14 @@
     <string name="DATA_SUCCESSFULLY_INSERTED">Thêm dữ liệu thành công</string>
     <string name="FAILED_TO_INSERT_DATA">Thêm dữ liệu không thành công</string>
     <string name="DATA_SUCCESSFULLY_DELETED">Xóa dữ liệu thành công </string>
-    <string name="DATA_SUCCESSFULLY_UPDATED">Cập nhật dữ liệu thành công </string>    <string name="FAILED_TO_DELETE_DATA">Xóa dữ liệu không thành công</string>
-
+    <string name="DATA_SUCCESSFULLY_UPDATED">Cập nhật dữ liệu thành công </string>
+    <string name="FAILED_TO_DELETE_DATA">Xóa dữ liệu không thành công</string>
     <string name="FAILED_TO_UPDATE_DATA">Cập nhật dữ liệu không thành công</string>
     <string name="INCORRECT_INPUT_FORMAT">Số liệu nhập vào không đúng định dạng!!!</string>
+    <string name="INCORRECT_INPUT_FORMAT_WITH_TEXT">Dữ liệu nhập vào không đúng định dạng!!!</string>
+    <string name="DATA_NOT_FOUND">Chưa có danh bộ đồng hồ hoặc mã khách hàng!!!</string>
+    <string name="ERROR_OCCURRED">Đã xảy ra lỗi</string>
+    <string name="PROCESSING">Đang xử lý...</string>
     <string name="name_nhanvien">Nhân viên A</string>
     <string name="gmail_nhanvien">nva.tanhoa@gmail.com</string>
 
@@ -95,8 +94,6 @@
     <string name="validate_no_connect">Không có kết nối internet</string>
     <string name="info_login_empty">Danh bạ hoặc mật khẩu không được để trống</string>
     <string name="validate_login_fail">Sai danh bạ hoặc mật khẩu</string>
-    <string name="validate_hieuluc">Đồng hồ của khách hàng đã không còn hiệu lực\nVui lòng liên hệ công ty Cấp nước Tân Hòa\nđể biết thêm thông tin</string>
-    <string name="validate_tracuutiennuoc_invalidtime">Chưa đến đợt đọc số!\nVui lòng chọn thời gian khác để tra cứu</string>
     <string name="sql_coloumn_login_status">status</string>
 
 
@@ -113,7 +110,7 @@
     <string name="connect_message">Đang kết nối đến máy chủ…</string>
     <string name="login_message">Đang kiểm tra thông tin đăng nhập…</string>
     <string name="async_dang_tai_du_lieu">Đang tải dữ liệu…</string>
-
+    <string name="async_dang_lay_hinh_anh_dinh_kem">Đang tải hình ảnh đính kèm…</string>
     <string name="preparing">Đang khởi tạo bản đồ…</string>
     <!--sql column login begin-->
     <string name="sql_coloumn_sys_id">LayerID</string>
